--- a/[GD-8]attention_based_seq2seq_translate.ipynb
+++ b/[GD-8]attention_based_seq2seq_translate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "narrative-pleasure",
+   "id": "interested-tunisia",
    "metadata": {},
    "source": [
     "# [Going Deeper NLP 08] 한영 번역기 만들기\n",
@@ -12,25 +12,150 @@
     "\n",
     "## 프로젝트 목표\n",
     "---\n",
-    "- WEAT score를 이해하고, 단어 임베딩 간의 편향성(관계)측정하는 메커니즘을 이해한다.\n",
-    "- 영화 시놉시스 데이터를 전처리한다.\n",
-    "- 해당 프로젝트에서 개선점을 찾는다. \n",
+    "- seq2seq 모델을 구현하며 이해한다.\n",
+    "- 기대 효과를 충족하는 모델을 구현한다.\n",
     "\n",
     "## 프로젝트 설명\n",
     "---\n",
-    "1. 형태소 분석기를 이용하여 품사가 명사인 경우 해당 단어를 추출하기\n",
-    "2. 추출된 결과로 embedding model 만들기\n",
-    "3. target, attribute 단어 셋 만들기\n",
-    "4. WEAT score 계산과 시각화\n",
+    "1. 데이터 다운로드 : [링크](https://github.com/jungyeul/korean-parallel-corpora/blob/master/korean-english-news-v1/korean-english-park.train.tar.gz)\n",
+    "2. 데이터 정제 \n",
+    "- 중복, 결측치 제거\n",
+    "- 한글 데이터 처리\n",
+    "- 토큰 추가 \n",
+    "3. 데이터 토큰화 \n",
+    "4. 모델 설계 \n",
+    "5. 훈련 및 attention map 시각화 \n",
     "\n",
     "    \n",
-    "## 1. 영화 시놉시스 데이터에서 코퍼스 만들기"
+    "## 0. Import module, library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "altered-engineer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1.0-rc2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import matplotlib.ticker as ticker\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import time\n",
+    "import re\n",
+    "import os\n",
+    "import io\n",
+    "\n",
+    "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "italic-greece",
+   "metadata": {},
+   "source": [
+    "## 1. 데이터 전처리 \n",
+    "- 중복 데이터 제거\n",
+    "- Input, output 데이터의 쌍을 유지해야한다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "celtic-brass",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/aiffel-dj26/aiffel/s2s_translation\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = os.getenv('HOME')+'/aiffel/s2s_translation'\n",
+    "print(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "informed-active",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Size: 94123\n",
+      "Example:\n",
+      ">> 개인용 컴퓨터 사용의 상당 부분은 \"이것보다 뛰어날 수 있느냐?\"\n",
+      ">> 북한의 핵무기 계획을 포기하도록 하려는 압력이 거세지고 있는 가운데, 일본과 북한의 외교관들이 외교 관계를 정상화하려는 회담을 재개했다.\n",
+      ">> \"경호 로보트가 침입자나 화재를 탐지하기 위해서 개인적으로, 그리고 전문적으로 사용되고 있습니다.\"\n",
+      ">> 수자원부 당국은 논란이 되고 있고, 막대한 비용이 드는 이 사업에 대해 내년에 건설을 시작할 계획이다.\n",
+      ">> 또한 근력 운동은 활발하게 걷는 것이나 최소한 20분 동안 뛰는 것과 같은 유산소 활동에서 얻는 운동 효과를 심장과 폐에 주지 않기 때문에, 연구학자들은 근력 운동이 심장에 큰 영향을 미치는지 여부에 대해 논쟁을 해왔다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(file_path+'/korean-english-park.train.ko', \"r\") as f:\n",
+    "    raw_ko = f.read().splitlines()\n",
+    "\n",
+    "print(\"Data Size:\", len(raw_ko))\n",
+    "print(\"Example:\")\n",
+    "\n",
+    "for sen in raw_ko[0:100][::20]: print(\">>\", sen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "cooperative-handbook",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Size: 94123\n",
+      "Example:\n",
+      ">> Much of personal computing is about \"can you top this?\"\n",
+      ">> Amid mounting pressure on North Korea to abandon its nuclear weapons program Japanese and North Korean diplomats have resumed talks on normalizing diplomatic relations.\n",
+      ">> “Guard robots are used privately and professionally to detect intruders or fire,” Karlsson said.\n",
+      ">> Authorities from the Water Resources Ministry plan to begin construction next year on the controversial and hugely expensive project.\n",
+      ">> Researchers also have debated whether weight-training has a big impact on the heart, since it does not give the heart and lungs the kind of workout they get from aerobic activities such as brisk walking or running for at least 20 minutes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(file_path+'/korean-english-park.train.en', \"r\") as f:\n",
+    "    raw_en = f.read().splitlines()\n",
+    "\n",
+    "print(\"Data Size:\", len(raw_en))\n",
+    "print(\"Example:\")\n",
+    "\n",
+    "for sen in raw_en[0:100][::20]: print(\">>\", sen)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suburban-valentine",
+   "id": "negative-examination",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -38,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unlikely-orchestra",
+   "id": "announced-closer",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -46,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worse-retrieval",
+   "id": "expressed-ideal",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -54,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abandoned-effectiveness",
+   "id": "instant-killer",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -62,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handy-nancy",
+   "id": "overall-soldier",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -70,63 +195,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quick-sandwich",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "sufficient-marketing",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "peripheral-pillow",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "secure-france",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "reduced-apache",
+   "id": "satisfied-inflation",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "scientific-knock",
+   "id": "existing-founder",
    "metadata": {},
    "source": [
     "# 루브릭 평가\n",
     "---\n",
-    "1. **주어진 영화 코퍼스를 바탕으로 워드임베딩 모델을 정상적으로 만들었다.**   \n",
+    "1. **번역기 모델 학습에 필요한 텍스트 데이터 전처리가 한국어 포함하여 잘 이루어졌다.**   \n",
     "\n",
-    "    - 학습한 워드임베딩 모델이 정상적으로 작동하는 것을 유사한 단어를 보여주는 most_similar함수로 확인했다. \n",
+    "    - 구두점, 대소문자, 띄어쓰기, 한글 형태소분석 등 번역기 모델에 요구되는 전처리가 정상적으로 진행되었다.\n",
     "\n",
     "\n",
-    "2. **영화 구분, 장르별로 target, attribute에 대한 대표성있는 단어 셋을 생성하였다.**\n",
+    "2. **Attentional Seq2seq 모델이 정상적으로 구동된다.**\n",
     "\n",
-    "    - 중복을 제거하는 과정을 통해 단어 셋을 구축할 수 있었다.\n",
-    "    \n",
+    "    - seq2seq 모델 훈련 과정에서 training loss가 안정적으로 떨어지면서 학습이 진행됨이 확인되었다.\n",
     "     \n",
-    "3. **WEAT score 계산 및 시각화를 정상적으로 진행하였다.** \n",
+    "3. **테스트 결과 의미가 통하는 수준의 번역문이 생성되었다.** \n",
     " \n",
-    "     - WEAT score를 계산하고 시각화하여 결과를 분석했다. \n",
+    "     - 테스트용 디코더 모델이 정상적으로 만들어져서, 정답과 어느 정도 유사한 영어 번역이 진행됨을 확인하였다.\n",
     "\n",
     "    \n",
     "# 회고\n",
